# SejmWatch

./: .env.example  .gitignore  CODEX_BUILD_LOG.md  DEMO_SCRIPT.md  Dockerfile  LICENSE  Procfile  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  compose.yaml  pyproject.toml  requirements.txt
sejmwatch/: __init__.py  ai.py  app.py  db.py  demo.py  diffing.py  evidence.py  ingest.py  models.py  monitor.py  official_sync.py  rag.py  sejm_api.py
sejmwatch/static/: ai.css  report.css  style.css  tree.css
sejmwatch/templates/: answer.html  base.html  case.html  global_answer.html  home.html  report.html  report_new.html  sejm.html  topic_ai_medicine.html  tree.html
submission/: VIDEO_STORYBOARD.md  canva-storyboard.html
tests/: test_core.py
