[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sejmwatch"
version = "0.1.0"
description = "Evidence-first legislative change intelligence for Polish parliamentary documents"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.9,<1",
  "httpx>=0.27,<1",
  "pymupdf>=1.24,<2",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
